Use Map.of instead of Collections.singletonMap